--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agenda\n",
+    "\n",
+    "1. What are decorators?\n",
+    "2. Writing your first decorator\n",
+    "3. Outer function storage\n",
+    "4. Inputs and outputs\n",
+    "5. Decorators that take arguments\n",
+    "6. Decorating classes\n",
+    "7. Writing decorators as classes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
