--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -25,6 +25,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A!\n",
+      "\n",
+      "B!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def a():\n",
+    "    return f'A!\\n'\n",
+    "\n",
+    "def b():\n",
+    "    return f'B!\\n'\n",
+    "\n",
+    "print(a())\n",
+    "print(b())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
