--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -55,7 +55,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# let's assume that our boss has now mandated that everything printed on a screen\n",
+    "# from our company needs to have lines (60 - signs) above and below everything we print.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
