--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -52,12 +52,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "A!\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "B!\n",
+      "------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# let's assume that our boss has now mandated that everything printed on a screen\n",
     "# from our company needs to have lines (60 - signs) above and below everything we print.\n",
+    "\n",
+    "lines = '-' * 60 + '\\n'\n",
+    "\n",
+    "def a():\n",
+    "    return f'{lines}A!\\n{lines}'\n",
+    "\n",
+    "def b():\n",
+    "    return f'{lines}B!\\n{lines}'\n",
+    "\n",
+    "print(a())\n",
+    "print(b())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I've violated the DRY rule\n",
+    "\n",
+    "DRY: Don't repeat yourself!\n",
     "\n"
    ]
   }
