--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -93,7 +93,33 @@
     "# I've violated the DRY rule\n",
     "\n",
     "DRY: Don't repeat yourself!\n",
-    "\n"
+    "\n",
+    "The problem is that every function that displays something on the screen will need to be modified. Moreover, if we ever want to change things again, we'll need to modify every function again.\n",
+    "\n",
+    "Is there another way to pull this off? Can I include `lines` without having to include the variable in every function?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 1: Write a new function that takes a function as an argument\n",
+    "\n",
+    "lines = '-' * 60 + '\\n'\n",
+    "\n",
+    "def with_lines(func):\n",
+    "    return f'{lines}{func()}{lines}'  # print lines above + bel\n",
+    "\n",
+    "def a():\n",
+    "    return f'{lines}A!\\n{lines}'\n",
+    "\n",
+    "def b():\n",
+    "    return f'{lines}B!\\n{lines}'\n",
+    "\n",
+    "print(a())\n",
+    "print(b())"
    ]
   }
  ],
