--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -101,6 +101,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "A!\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "B!\n",
+      "------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Option 1: Write a new function that takes a function as an argument\n",
+    "\n",
+    "lines = '-' * 60 + '\\n'\n",
+    "\n",
+    "def with_lines(func):\n",
+    "    return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
+    "\n",
+    "def a():\n",
+    "    return f'A!\\n'\n",
+    "\n",
+    "def b():\n",
+    "    return f'B!\\n'\n",
+    "\n",
+    "print(with_lines(a))\n",
+    "print(with_lines(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -110,16 +148,16 @@
     "lines = '-' * 60 + '\\n'\n",
     "\n",
     "def with_lines(func):\n",
-    "    return f'{lines}{func()}{lines}'  # print lines above + bel\n",
+    "    return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
     "\n",
     "def a():\n",
-    "    return f'{lines}A!\\n{lines}'\n",
+    "    return f'A!\\n'\n",
     "\n",
     "def b():\n",
-    "    return f'{lines}B!\\n{lines}'\n",
+    "    return f'B!\\n'\n",
     "\n",
-    "print(a())\n",
-    "print(b())"
+    "print(with_lines(a))\n",
+    "print(with_lines(b))"
    ]
   }
  ],
