--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -143,15 +143,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Option 1: Write a new function that takes a function as an argument\n",
+    "# Option 2: Turn with_lines into a function that returns a function\n",
+    "# in other words: we're going to create a closure!\n",
     "\n",
     "lines = '-' * 60 + '\\n'\n",
     "\n",
     "def with_lines(func):\n",
-    "    return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
+    "    def wrapper():\n",
+    "        return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
+    "    return wrapper\n",
     "\n",
     "def a():\n",
     "    return f'A!\\n'\n",
+    "with_lines_a = with_lines(a)\n",
     "\n",
     "def b():\n",
     "    return f'B!\\n'\n",
