--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -139,9 +139,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "A!\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "B!\n",
+      "------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Option 2: Turn with_lines into a function that returns a function\n",
     "# in other words: we're going to create a closure!\n",
@@ -153,15 +168,49 @@
     "        return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
     "    return wrapper\n",
     "\n",
+    "# here, we have 3 functions:\n",
+    "# a, the decorated function\n",
+    "# with_lines, the decorator function\n",
+    "# wrapper, returned from with_lines, and assigned to with_lines_a\n",
+    "\n",
     "def a():\n",
     "    return f'A!\\n'\n",
     "with_lines_a = with_lines(a)\n",
     "\n",
     "def b():\n",
     "    return f'B!\\n'\n",
+    "with_lines_b = with_lines(b)\n",
     "\n",
-    "print(with_lines(a))\n",
-    "print(with_lines(b))"
+    "print(with_lines_a())\n",
+    "print(with_lines_b())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 3: Don't assign to with_lines_a and with_lines_b\n",
+    "# Rather, assign to a and b!\n",
+    "\n",
+    "lines = '-' * 60 + '\\n'\n",
+    "\n",
+    "def with_lines(func):\n",
+    "    def wrapper():\n",
+    "        return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
+    "    return wrapper\n",
+    "\n",
+    "def a():\n",
+    "    return f'A!\\n'\n",
+    "a = with_lines(a)\n",
+    "\n",
+    "def b():\n",
+    "    return f'B!\\n'\n",
+    "with_lines_b = with_lines(b)\n",
+    "\n",
+    "print(with_lines_a())\n",
+    "print(with_lines_b())"
    ]
   }
  ],
