--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -187,9 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "A!\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "B!\n",
+      "------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Option 3: Don't assign to with_lines_a and with_lines_b\n",
     "# Rather, assign to a and b!\n",
@@ -207,11 +222,63 @@
     "\n",
     "def b():\n",
     "    return f'B!\\n'\n",
-    "with_lines_b = with_lines(b)\n",
+    "b = with_lines(b)\n",
     "\n",
-    "print(with_lines_a())\n",
-    "print(with_lines_b())"
+    "print(a())\n",
+    "print(b())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "A!\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "B!\n",
+      "------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Option 4: Use decorator syntax\n",
+    "# Rather, assign to a and b!\n",
+    "\n",
+    "lines = '-' * 60 + '\\n'\n",
+    "\n",
+    "def with_lines(func):\n",
+    "    def wrapper():\n",
+    "        return f'{lines}{func()}{lines}'  # print lines above + below the output from func()\n",
+    "    return wrapper\n",
+    "\n",
+    "@with_lines\n",
+    "def a():\n",
+    "    return f'A!\\n'\n",
+    "# a = with_lines(a)    # this line's functionality is now being done on line 11\n",
+    "\n",
+    "@with_lines\n",
+    "def b():\n",
+    "    return f'B!\\n'\n",
+    "# b = with_lines(b)   # this line's functionality is being done on line 16\n",
+    "\n",
+    "print(a())\n",
+    "print(b())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
