--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -274,11 +274,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What's a decorator, then?\n",
+    "\n",
+    "- A function\n",
+    "- That takes a function as an argument\n",
+    "- And returns a function\n",
+    "\n",
+    "When we apply the decorator, we put `@deco_name` above the function we want to decorate. The original function is no longer available via its name. Rather, the name refers to the `wrapper` (i.e., the inner function) returned by the decorator.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
