--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -286,6 +286,23 @@
     "When we apply the decorator, we put `@deco_name` above the function we want to decorate. The original function is no longer available via its name. Rather, the name refers to the `wrapper` (i.e., the inner function) returned by the decorator.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Who needs this?\n",
+    "\n",
+    "There are numerous uses for decorators, because they allow us to hijack the function at two points in its life:\n",
+    "\n",
+    "1. At definition, when the outer decorator function runs\n",
+    "2. When we run it, when the inner decorator function runs\n",
+    "\n",
+    "Some uses:\n",
+    "\n",
+    "1. If we have many functions that need to do the same thing, we can extract that similarity and apply a decorator.\n",
+    "2. Timing of fun"
+   ]
   }
  ],
  "metadata": {
