--- a/LernerPython - 2024-08Aug-decorators.ipynb
+++ b/LernerPython - 2024-08Aug-decorators.ipynb
@@ -301,8 +301,21 @@
     "Some uses:\n",
     "\n",
     "1. If we have many functions that need to do the same thing, we can extract that similarity and apply a decorator.\n",
-    "2. Timing of fun"
+    "2. Timing of functions\n",
+    "3. Security of functions\n",
+    "4. Setting values before/after the function runs (setup/teardown)\n",
+    "5. Logging\n",
+    "6. Checking/filtering inputs\n",
+    "7. Checking/filtering outputs\n",
+    "8. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
